# Malwarka

./: .gitignore  CMakeLists.txt  FindFunctionByName.cpp  concrete_syscall.cpp  concrete_syscall.h  concrete_syscall_factory.h  dependencies.h  main.cpp  syscall.asm  syscall.h  syscall_factory.h  syscall_helper.cpp  syscall_helper.h
Headers/: Defenitions.hpp  Dependencies.hpp  FunctionInfo.hpp  call_function_by_name.hpp  function_info.hpp  syscall.h  syscall.hpp
Sources/: Main.cpp  find_function_by_name.cpp  invoke_function.cpp  resolve_functions.cpp  syscall.asm  syscall_macros.asm  syscalls.asm
